# ARENA

./: [0_0]_Prerequisites_(exercises).ipynb  [0_1]_Ray_Tracing_(exercises).ipynb  [0_2]_CNNs_&_ResNets_(exercises).ipynb  [1_1]_Transformer_from_Scratch_(exercises).ipynb  [1_2]_Intro_to_Mech_Interp_(exercises).ipynb  pyproject.toml
chapter0_fundamentals/exercises/part0_prereqs/: answers.py
chapter0_fundamentals/exercises/part3_optimization/: 0.3_Optimization_exercises.ipynb
chapter0_fundamentals/exercises/part4_backprop/: 0.4_Backprop_exercises.ipynb
chapter1_transformer_interp/exercises/part1_transformer_from_scratch/: 1.1_Transformer_from_Scratch_exercises.ipynb
chapter1_transformer_interp/exercises/part2_intro_to_mech_interp/: 1.2_Intro_to_Mech_Interp_exercises.ipynb
chapter2_rl/exercises/part1_intro_to_rl/: 2.1_Intro_to_RL_exercises.ipynb
chapter2_rl/exercises/part2_q_learning_and_dqn/: 2.2_Q-Learning_and_DQN_exercises.ipynb
chapter2_rl/exercises/part3_ppo/: 2.3_PPO_exercises.ipynb
